--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <!--====== Required meta tags ======-->
+    <meta charset="UTF-8">
+    <META http-qeuiv="x-ua-compatible" content="ie-edge" />
+    <meta name="description" content="พอร์ตโฟลิโอ้" />
+    <meta name="author" content="นายเอื้ออังกูร บำรุงราษฏร์">
+    <meta name="viewport" content="width=device-width, intitial-scale=1, shrink-to-fi">
 
+    <!--====== Title ======-->
+    <title>หน้าแรก</title>
+</head>
+<body>
+    <img src="me.png" alt="รูปของฉัน">
+    
+</body>
+</html>
