--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
 <head>
     <!--====== Required meta tags ======-->
     <meta charset="UTF-8">
@@ -13,6 +13,6 @@
 </head>
 <body>
     <img src="me.png" alt="รูปของฉัน">
-    
+
 </body>
 </html>
