--- a/index-en.html
+++ b/index-en.html
@@ -5,12 +5,12 @@
     <!--====== Required meta tags ======-->
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="description" content="Port Folio, CV, Resume, Profiles, Portfolio" />
-    <meta name="author" content="Mr.Pattana Boonthung">
+    <meta name="description" content="พอร์ตโฟลิโอ, โปรไฟล์ของฉัน, ประวัติย่อ, โปรไฟล์, พอร์ตโฟลิโอ" />
+    <meta name="author" content="นายเอื้ออังกูร บำรุงราษฏร์">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!--====== Title ======-->
-    <title>It's Me - Port Folio || Home</title>
+    <title>ฉันเอง - พอร์ตโฟลิโอ || บ้าน</title>
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
     <!--====== Google Fonts ======-->
@@ -42,7 +42,7 @@
         <header id="header" class="header">
             <div class="container-fluid">
                 <div class="brand">
-                    <a href="index-en.html" class="brand-name"><b>it's</b> My Port Folio</a>
+                    <a href="index-en.html" class="brand-name"><b>นี่คือ</b> พอร์ตโฟลิโอของฉัน</a>
                 </div>
 
                 <button class="nav-toggle-btn a-nav-toggle">
@@ -61,11 +61,11 @@
                     </div>
                     <div class="menu-main mt-100" id="accordion">
                         <ul id="menuMain">
-                            <li data-menuanchor="About" class="active"><a href="#About">About</a></li>
-                            <li data-menuanchor="Lifestyle"><a href="#Lifestyle">Lifestyle</a></li>
-                            <li data-menuanchor="Skills"><a href="#Skills">Skills</a></li>
-                            <li data-menuanchor="Resume"><a href="#Resume">Resume</a></li>
-                            <li data-menuanchor="Portfolio"><a href="#Portfolio">Portfolio</a></li>
+                            <li data-menuanchor="About" class="active"><a href="#About">เกี่ยวกับ</a></li>
+                            <li data-menuanchor="Lifestyle"><a href="#Lifestyle">ไลฟ์สไตล์</a></li>
+                            <li data-menuanchor="Skills"><a href="#Skills">ทักษะ</a></li>
+                            <li data-menuanchor="Resume"><a href="#Resume">ประวัติย่อ</a></li>
+                            <li data-menuanchor="Portfolio"><a href="#Portfolio">พอร์ตโฟลิโอ</a></li>
                             <li data-menuanchor="Contact"><a href="#Contact">Contact</a></li>
                         </ul>
                     </div>
@@ -81,19 +81,19 @@
                             <div class="number-email-cv">
                                 <ul class="number-email">
                                     <li>Call me:(+66) 09-7247-8128</li>
-                                    <li>pattanadevelop@gmail.com</li>
+                                    <li>33104@ds.ac.th</li>
                                 </ul>
                                     <li><a href="index.html">Thai</a> | <a href="index-en.html">English</a></li>
                             </div>
                             <div class="row align-items-center">
                                 <div class="col-lg-5">
                                     <div class="about-content pt-100 rpt-0 animate-element delay5 fadeInUp">
-                                        <span class="sub-title mb-15 animate-element delay3 fadeInUp">About Me</span>
-                                        <h2 class="slide-title animate-element delay5 fadeInUp">Hi,<br> I’m <span class="text-typed a-typed a-typed-about" data-text="Pattana Boonthung"></span></h2>
-                                        <h3 class="animate-element delay7 fadeInUp">Darasamutr School</h3>
-                                        <p class="animate-element delay8 fadeInUp">Birthday<b>:</b>  10 August 1992.</p>
-                                        <p class="animate-element delay8 fadeInUp">Nickname<b>:</b>  Ma-Toy.</p>
-                                        <p class="animate-element delay8 fadeInUp">Epigram<b>:</b>  The future depends on what we do in the present.</p>
+                                        <span class="sub-title mb-15 animate-element delay3 fadeInUp">เกี่ยวกับ</span>
+                                        <h2 class="slide-title animate-element delay5 fadeInUp">สวัสดีครับ,<br> ฉันเอง <span class="text-typed a-typed a-typed-about" data-text="Pattana Boonthung"></span></h2>
+                                        <h3 class="animate-element delay7 fadeInUp">โรงเรียนดาราสมุทร</h3>
+                                        <p class="animate-element delay8 fadeInUp">วันเกิด<b>:</b>  25 มกราคม 2007.</p>
+                                        <p class="animate-element delay8 fadeInUp">ชื่อเล่น<b>:</b>  อังกูร.</p>
+                                        <p class="animate-element delay8 fadeInUp">คำคม<b>:</b>  รอนานเดี๋ยวบานปลาย.</p>
                                         <div class="social-style-one mt-55 rmt-35 animate-element delay10 fadeInUp">
                                             <a href="https://www.facebook.com/sirachadevelop"><i class="fab fa-facebook-f"></i></a>
                                             <a href="https://www.twitter.com/sirachadevelop"><i class="fab fa-twitter"></i></a>
