--- a/index-en.html
+++ b/index-en.html
@@ -89,7 +89,7 @@
                                 <div class="col-lg-5">
                                     <div class="about-content pt-100 rpt-0 animate-element delay5 fadeInUp">
                                         <span class="sub-title mb-15 animate-element delay3 fadeInUp">เกี่ยวกับ</span>
-                                        <h2 class="slide-title animate-element delay5 fadeInUp">สวัสดีครับ,<br> ฉันเอง <span class="text-typed a-typed a-typed-about" data-text="Pattana Boonthung"></span></h2>
+                                        <h2 class="slide-title animate-element delay5 fadeInUp">สวัสดีครับ,<br> ฉันเอง <span class="text-typed a-typed a-typed-about" data-text="เอื้ออังกูร บำรงราษฏร์"></span></h2>
                                         <h3 class="animate-element delay7 fadeInUp">โรงเรียนดาราสมุทร</h3>
                                         <p class="animate-element delay8 fadeInUp">วันเกิด<b>:</b>  25 มกราคม 2007.</p>
                                         <p class="animate-element delay8 fadeInUp">ชื่อเล่น<b>:</b>  อังกูร.</p>
