--- a/index.html
+++ b/index.html
@@ -133,33 +133,33 @@
                                 <div class="col-lg-5">
                                     <div class="service-content pt-100 rpt-55 animate-element delay5 fadeInUp">
                                         <div class="section-title mb-25">
-                                            <h2 class="slide-title animate-element delay5 fadeInUp">กิจกรรมพักผ่อน <span class="text-typed a-typed a-typed-services" data-text="กิจวัตร"></span> ในชีวิตประจำวันทั่วไป.</h2>
+                                            <h2 class="slide-title animate-element delay5 fadeInUp">เวลาว่าง <span class="text-typed a-typed a-typed-services" data-text="กิจวัตร"></span> ในชีวิตประจำวันทั่วไป.</h2>
                                         </div>
-                                        <p class="animate-element delay6 fadeInUp">โปรดปราน การดำเนินชีวิตแบบไลท์สไตล์ ตามธรรมชาติ, ธรรมดาๆ แบบชิวๆ <b>ไม่หรูหรา แต่เรียบง่าย.</b></p>
+                                        <p class="animate-element delay6 fadeInUp">กินนอนแล้วก็กินแล้วก็นอน, เล่นเกมไปวันๆ <b>เบื่อแล้วส้มตำอยากหม่ำส้นตีน.</b></p>
                                         <div class="our-services animate-element delay8 fadeInUp">
                                             <div class="service-item">
                                                 <div class="icon">
                                                     <img src="assets/images/lifestyle/service-icon1.png" alt="Icon">
                                                 </div>
-                                                <h4>ฟังเพลง</h4>
+                                                <h4>เล่นเกม</h4>
                                             </div>
                                             <div class="service-item">
                                                 <div class="icon">
                                                     <img src="assets/images/lifestyle/service-icon2.png" alt="Icon">
                                                 </div>
-                                                <h4>เล่นเฟสต์บุ๊ค</h4>
+                                                <h4>ดูหนัง</h4>
                                             </div>
                                             <div class="service-item">
                                                 <div class="icon">
                                                     <img src="assets/images/lifestyle/service-icon3.png" alt="Icon">
                                                 </div>
-                                                <h4>ดูยูทูป</h4>
+                                                <h4>ออกกำลังกาย</h4>
                                             </div>
                                             <div class="service-item">
                                                 <div class="icon">
                                                     <img src="assets/images/lifestyle/service-icon4.png" alt="Icon">
                                                 </div>
-                                                <h4>ว่ายน้ำ</h4>
+                                                <h4>อ่านหนังสือ</h4>
                                             </div>
                                         </div>
                                     </div>
@@ -182,7 +182,7 @@
                                         <div class="bar-list a-progressbar pt-5 animate-element delay9 fadeInUp">
                                             <div class="bar-item">
                                                 <div class="row">
-                                                    <div class="col bar-item-title">ภาษาจีน</div>
+                                                    <div class="col bar-item-title">ภาษาไทย</div>
                                                     <div class="col-auto text-right bar-item-value">75%</div>
                                                 </div>
                                                 <div class="progress">
@@ -191,7 +191,7 @@
                                             </div>
                                             <div class="bar-item">
                                                 <div class="row">
-                                                    <div class="col bar-item-title">ภาษาญี่่ปุ่น</div>
+                                                    <div class="col bar-item-title">ภาษาอังกฤษ</div>
                                                     <div class="col-auto text-right bar-item-value">81%</div>
                                                 </div>
                                                 <div class="progress">
@@ -200,7 +200,7 @@
                                             </div>
                                             <div class="bar-item">
                                                 <div class="row">
-                                                    <div class="col bar-item-title">คอมพิวเตอร์ออกแบบ</div>
+                                                    <div class="col bar-item-title">ภาษาฝรั่งเศษ</div>
                                                     <div class="col-auto text-right bar-item-value">85%</div>
                                                 </div>
                                                 <div class="progress">
@@ -247,16 +247,16 @@
                                                 <span class="years">2019-2022</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">มัธยมศึกษาตอนปลาย</span>
-                                                    <h4 class="subject">แผนการเรียนจีน-อังกฤษ</h4>
+                                                    <h4 class="subject">แผนการเรียนคณิต-อังกฤษ</h4>
                                                     <h6 class="institution">โรงเรียนดาราสมุทร</h6>
-                                                    <p>ทักษะฟัง พูด อ่าน เขียน ดานภาษาจีน อังกฤษ และแกรมมา ไวยากรด้านภาษา วัฒนธรรมต่างชาติ.</p>
+                                                    <p>ทักษะฟัง พูด อ่าน เขียน ภาษาอังกฤษ และแกรมมา ไวยากรด้านภาษา วัฒนธรรมต่างชาติ.</p>
                                                 </div>
                                             </div>
                                             <div class="edu-experi-item animate-element delay8 fadeInUp">
-                                                <span class="years">2016-2019</span>
+                                                <span class="years">2019-2024</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">มัธยมศึกษาตอนต้น</span>
-                                                    <h4 class="subject">แผนการเรียนวิทย์-คณิต</h4>
+                                                    <h4 class="subject">แผนการเรียนคณิต-อังกฤษ</h4>
                                                     <h6 class="institution">โรงเรียนดาราสมุทร</h6>
                                                     <p>วิทยาศาตร์ คณิตศาสตร์พื้นฐาน สิ่งมีชีวิต สสาร แรงโน้มถ่วง การบวก ลบ คูณ หาร ทศนิยม เรขาคณิตวิเคราะห์ .</p>
                                                 </div>
@@ -272,18 +272,18 @@
                                         </div>
                                         <div class="edu-experi-wrap">
                                             <div class="edu-experi-item beahance animate-element delay7 fadeInUp">
-                                                <span class="years">2013-2016</span>
+                                                <span class="years">2010-2018</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">ระดับก่อนประถมศึกษา</span>
-                                                    <h4 class="subject">โรงเรียนดาราสมุทร</h4>
+                                                    <h4 class="subject">โรงเรียนดวงมณี</h4>
                                                     <p>ทักษะการใช้ชีวิตประจำวัน ตามสุขลักษณะ การพึ่งตนเอง การทำกิจกรรม การสื่อสารกับเพื่อน การนับเลข จำแนกสี กิจกรรมด้านรางการ การทรงตัว การหยิบวัตถุ.</p>
                                                 </div>
                                             </div>
                                             <div class="edu-experi-item dribbble animate-element delay10 fadeInUp">
-                                                <span class="years">2010-2013</span>
+                                                <span class="years">2010-2018</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">ระดับประถมศึกษา</span>
-                                                    <h4 class="subject">โรงเรียนดาราสมุทร</h4>
+                                                    <h4 class="subject">โรงเรียนดวงมณี</h4>
                                                     <p>การพูด ฟัง อ่าน เขียน พื้นฐาน ได้ถูกต้อง การบวก ลบ คูณ หาร ตัวเลข กิจกรรมเสริมสมรรถภาพร่างกาย ทักษะด้านภาษาต่างประเทศ มากกว่า 2 ภาษา.</p>
                                                 </div>
                                             </div>
@@ -347,8 +347,8 @@
                                    <h2>ช่องทางการติดต่อ สื่อสาร</h2>
                                </div>
                                <span class="country list-inline-item animate-element delay9 fadeInUp">ศรีราชา, ชลบุรี</span>
-                               <h3 class="animate-element delay6 fadeInUp">pattanadevelop@gmail.com</h3>
-                               <h4 class="number list-inline-item animate-element delay10 fadeInUp">(+66) 09-7247-8128</h4>
+                               <h3 class="animate-element delay6 fadeInUp">33104@gmail.com</h3>
+                               <h4 class="number list-inline-item animate-element delay10 fadeInUp">(+66) 08-99387578</h4>
                            </div>
                         </div>
                         <div class="footer-bottom-girl animate-element delay12 zoomIn">
