--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                                    <h2>ช่องทางการติดต่อ สื่อสาร</h2>
                                </div>
                                <span class="country list-inline-item animate-element delay9 fadeInUp">ศรีราชา, ชลบุรี</span>
-                               <h3 class="animate-element delay6 fadeInUp">33104@gmail.com</h3>
+                               <h3 class="animate-element delay6 fadeInUp">33104@ds.ac.th</h3>
                                <h4 class="number list-inline-item animate-element delay10 fadeInUp">(+66) 08-99387578</h4>
                            </div>
                         </div>
