--- a/index-en.html
+++ b/index-en.html
@@ -61,11 +61,11 @@
                     </div>
                     <div class="menu-main mt-100" id="accordion">
                         <ul id="menuMain">
-                            <li data-menuanchor="About" class="active"><a href="#About">เกี่ยวกับ</a></li>
-                            <li data-menuanchor="Lifestyle"><a href="#Lifestyle">ไลฟ์สไตล์</a></li>
-                            <li data-menuanchor="Skills"><a href="#Skills">ทักษะ</a></li>
-                            <li data-menuanchor="Resume"><a href="#Resume">ประวัติย่อ</a></li>
-                            <li data-menuanchor="Portfolio"><a href="#Portfolio">พอร์ตโฟลิโอ</a></li>
+                            <li data-menuanchor="About" class="active"><a href="#About">About</a></li>
+                            <li data-menuanchor="Lifestyle"><a href="#Lifestyle">Lifestyle</a></li>
+                            <li data-menuanchor="Skills"><a href="#Skills">Skill</a></li>
+                            <li data-menuanchor="Resume"><a href="#Resume">CV</a></li>
+                            <li data-menuanchor="Portfolio"><a href="#Portfolio">Portfolio</a></li>
                             <li data-menuanchor="Contact"><a href="#Contact">Contact</a></li>
                         </ul>
                     </div>
@@ -88,12 +88,12 @@
                             <div class="row align-items-center">
                                 <div class="col-lg-5">
                                     <div class="about-content pt-100 rpt-0 animate-element delay5 fadeInUp">
-                                        <span class="sub-title mb-15 animate-element delay3 fadeInUp">เกี่ยวกับ</span>
-                                        <h2 class="slide-title animate-element delay5 fadeInUp">สวัสดีครับ,<br> ฉันเอง <span class="text-typed a-typed a-typed-about" data-text=" เอื้ออังกูร บำรงราษฏร์"></span></h2>
-                                        <h3 class="animate-element delay7 fadeInUp"> โรงเรียนดาราสมุทร</h3>
-                                        <p class="animate-element delay8 fadeInUp">วันเกิด<b>:</b>  25 มกราคม 2007.</p>
-                                        <p class="animate-element delay8 fadeInUp">ชื่อเล่น<b>:</b>  อังกูร.</p>
-                                        <p class="animate-element delay8 fadeInUp">คำคม<b>:</b>  รอนานเดี๋ยวบานปลาย.</p>
+                                        <span class="sub-title mb-15 animate-element delay3 fadeInUp">About</span>
+                                        <h2 class="slide-title animate-element delay5 fadeInUp">Hello,<br> It's me <span class="text-typed a-typed a-typed-about" data-text=" เอื้ออังกูร บำรงราษฏร์"></span></h2>
+                                        <h3 class="animate-element delay7 fadeInUp"> Darasamutr School</h3>
+                                        <p class="animate-element delay8 fadeInUp">BirthDay<b>:</b>  25 January 2007.</p>
+                                        <p class="animate-element delay8 fadeInUp">Nickname<b>:</b>  Angkoon.</p>
+                                        <p class="animate-element delay8 fadeInUp">quotation<b>:</b> Wait a long time or it will escalate..</p>
                                         <div class="social-style-one mt-55 rmt-35 animate-element delay10 fadeInUp">
                                             <a href="https://www.facebook.com/sirachadevelop"><i class="fab fa-facebook-f"></i></a>
                                             <a href="https://www.twitter.com/sirachadevelop"><i class="fab fa-twitter"></i></a>
@@ -181,7 +181,7 @@
                                             <div class="bar-item">
                                                 <div class="row">
                                                     <div class="col bar-item-title">English Language</div>
-                                                    <div class="col-auto text-right bar-item-value">78%</div>
+                                                    <div class="col-auto text-right bar-item-value">81%</div>
                                                 </div>
                                                 <div class="progress">
                                                     <div class="progress-bar" role="progressbar" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100"></div>
@@ -189,8 +189,8 @@
                                             </div>
                                             <div class="bar-item">
                                                 <div class="row">
-                                                    <div class="col bar-item-title">Chinese Language</div>
-                                                    <div class="col-auto text-right bar-item-value">95%</div>
+                                                    <div class="col bar-item-title">French Language</div>
+                                                    <div class="col-auto text-right bar-item-value">85%</div>
                                                 </div>
                                                 <div class="progress">
                                                     <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
@@ -198,8 +198,8 @@
                                             </div>
                                             <div class="bar-item">
                                                 <div class="row">
-                                                    <div class="col bar-item-title">Art & illustration</div>
-                                                    <div class="col-auto text-right bar-item-value">65%</div>
+                                                    <div class="col bar-item-title">Thai Language</div>
+                                                    <div class="col-auto text-right bar-item-value">75%</div>
                                                 </div>
                                                 <div class="progress">
                                                     <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
@@ -208,7 +208,7 @@
                                             <div class="bar-item">
                                                 <div class="row">
                                                     <div class="col bar-item-title">Programing</div>
-                                                    <div class="col-auto text-right bar-item-value">85%</div>
+                                                    <div class="col-auto text-right bar-item-value">70%</div>
                                                 </div>
                                                 <div class="progress">
                                                     <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -242,19 +242,19 @@
                                         </div>
                                         <div class="edu-experi-wrap">
                                             <div class="edu-experi-item animate-element delay5 fadeInUp">
-                                                <span class="years">2019-2022</span>
+                                                <span class="years">2019-2024</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">Secondary School</span>
-                                                    <h4 class="subject">English-Chinese Program</h4>
+                                                    <h4 class="subject">English-Math Program</h4>
                                                     <h6 class="institution">Darasamutr School</h6>
                                                     <p>English communication, coversation, Gramma,  Chinese communication, Speaking.</p>
                                                 </div>
                                             </div>
                                             <div class="edu-experi-item animate-element delay8 fadeInUp">
-                                                <span class="years">2016-2019</span>
+                                                <span class="years">2019-2024</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">Secondary School</span>
-                                                    <h4 class="subject">Math-Science Program</h4>
+                                                    <h4 class="subject">English-Math Program</h4>
                                                     <h6 class="institution">Darasamutr School</h6>
                                                     <p>Mathemetics Calculus, geometry, Probabilities, Physical science and biological sciences.</p>
                                                 </div>
@@ -270,18 +270,18 @@
                                         </div>
                                         <div class="edu-experi-wrap">
                                             <div class="edu-experi-item beahance animate-element delay7 fadeInUp">
-                                                <span class="years">2013-2016</span>
+                                                <span class="years">2010-2018</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">Kingdergarten School</span>
-                                                    <h4 class="subject">Darasamutr School</h4>
+                                                    <h4 class="subject">Duangmanee School</h4>
                                                     <p>Life Skills Studies, Self Help, Learning and Speaking, Basic Communication, Number counting, Color classification, Balance, Basic Languages.</p>
                                                 </div>
                                             </div>
                                             <div class="edu-experi-item dribbble animate-element delay10 fadeInUp">
-                                                <span class="years">2010-2013</span>
+                                                <span class="years">2010-2018</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">Primary School</span>
-                                                    <h4 class="subject">Darasamutr School</h4>
+                                                    <h4 class="subject">Duangmanee School</h4>
                                                     <p>Listing, Speaking, Reading, Writing, Spelling Thai and English, Learning Forign Languages, Science, Mathematics,Social behavier.</p>
                                                 </div>
                                             </div>
@@ -344,8 +344,8 @@
                                    <h2>Stay Connected</h2>
                                </div>
                                <span class="country list-inline-item animate-element delay9 fadeInUp">Si Racha, Chonburi</span>
-                               <h3 class="animate-element delay6 fadeInUp">pattanadevelop@gmail.com</h3>
-                               <h4 class="number list-inline-item animate-element delay10 fadeInUp">(+66) 09-7247-8128</h4>
+                               <h3 class="animate-element delay6 fadeInUp">33104@ds.ac.th</h3>
+                               <h4 class="number list-inline-item animate-element delay10 fadeInUp">(+66) 08-99387578</h4>
                                <!--<div class="social-style-two mt-25 animate-element delay11 fadeInUp">
                                     <a href="#"><img src="assets/images/contact/social-dribbble.png" alt="Social"></a>
                                     <a href="#"><img src="assets/images/contact/social-behance.png" alt="Social"></a>
