--- a/index-en.html
+++ b/index-en.html
@@ -139,25 +139,25 @@
                                                 <div class="icon">
                                                     <img src="assets/images/lifestyle/service-icon1.png" alt="Icon">
                                                 </div>
-                                                <h4>Music</h4>
+                                                <h4>Play games</h4>
                                             </div>
                                             <div class="service-item">
                                                 <div class="icon">
                                                     <img src="assets/images/lifestyle/service-icon2.png" alt="Icon">
                                                 </div>
-                                                <h4>Facebook</h4>
+                                                <h4>Movie</h4>
                                             </div>
                                             <div class="service-item">
                                                 <div class="icon">
                                                     <img src="assets/images/lifestyle/service-icon3.png" alt="Icon">
                                                 </div>
-                                                <h4>Youtube</h4>
+                                                <h4>Exercise</h4>
                                             </div>
                                             <div class="service-item">
                                                 <div class="icon">
                                                     <img src="assets/images/lifestyle/service-icon4.png" alt="Icon">
                                                 </div>
-                                                <h4>Swimming</h4>
+                                                <h4>Read Books</h4>
                                             </div>
                                         </div>
                                     </div>
