--- a/index-en.html
+++ b/index-en.html
@@ -5,12 +5,12 @@
     <!--====== Required meta tags ======-->
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="description" content="พอร์ตโฟลิโอ, โปรไฟล์ของฉัน, ประวัติย่อ, โปรไฟล์, พอร์ตโฟลิโอ" />
-    <meta name="author" content="นายเอื้ออังกูร บำรุงราษฏร์">
+    <meta name="description" content="PortFolio, Profile, CV, Profile, Portfolio" />
+    <meta name="author" content="Mr.Aueangkoon Bumrungead">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!--====== Title ======-->
-    <title>ฉันเอง - พอร์ตโฟลิโอ || บ้าน</title>
+    <title>Its'me - Portfolio || Home</title>
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
     <!--====== Google Fonts ======-->
@@ -42,7 +42,7 @@
         <header id="header" class="header">
             <div class="container-fluid">
                 <div class="brand">
-                    <a href="index-en.html" class="brand-name"><b>นี่คือ</b> พอร์ตโฟลิโอของฉัน</a>
+                    <a href="index-en.html" class="brand-name"><b>This is</b> My Portfolio</a>
                 </div>
 
                 <button class="nav-toggle-btn a-nav-toggle">
