--- a/index-en.html
+++ b/index-en.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="description" content="PortFolio, Profile, CV, Profile, Portfolio" />
-    <meta name="author" content="Mr.Aueangkoon Bumrungead">
+    <meta name="author" content="Aueangkoon Bumrungrad">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!--====== Title ======-->
